--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,34 +1,36 @@
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-  page: true
-  socials:
-    x: yangshunz
-    github: yangshun
+# yangshun:
+#   name: Yangshun Tay
+#   title: Front End Engineer @ Facebook
+#   url: https://github.com/yangshun
+#   image_url: https://github.com/yangshun.png
+#   page: true
+#   socials:
+#     x: yangshunz
+#     github: yangshun
 
 
 harris:
   name: Harris Ishfak
-  title: CEO & Founder iCodeRemotely
+  title: CEO & Founder, iCodeRemotely
   url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
+  image_url: img/myphoto (1).jpg
   page: true
   socials:
-    x: harris_ishfak
-    github: harris_ishfak
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
-  socials:
-    x: sebastienlorber
+    x: harris
+    instagram: harris_ishfak
+    youtube: harris
     linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+
+# slorber:
+#   name: Sébastien Lorber
+#   title: Docusaurus maintainer
+#   url: https://sebastienlorber.com
+#   image_url: https://github.com/slorber.png
+#   page:
+    # customize the url of the author page at /blog/authors/<permalink>
+  #   permalink: '/all-sebastien-lorber-articles'
+  # socials:
+  #   x: sebastienlorber
+  #   linkedin: sebastienlorber
+  #   github: slorber
+  #   newsletter: https://thisweekinreact.com
