--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -11,7 +11,7 @@ yangshun:
 
 harris:
   name: Harris Ishfak
-  title: Founder, iCodeRemotely
+  title: Founder, iChildBloom & iCodeRemotely
   url: https://github.com/harrisishfak
   image_url: https://harrisishfak.github.io/myphoto/myphoto%20(1).jpg
   page: true
